# BotanIQ

./: .flake8  .gitignore  README.md  cdk.json  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
cdk/: app.py  stacks.py
config/: email_subscribers.json
lambda_functions/: main_handler.py
lambda_functions/utils/: notifications.py  rekognition.py
scripts/: format.py  lint.py
tests/: conftest.py  e2e.py  test_main_handler.py
